--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
     "expo-constants": "~14.0.2",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-linking": "~3.3.0",
     "expo-splash-screen": "~0.17.5",
@@ -30,6 +31,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-purchases": "^5.7.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
