feat: add RevenueCat
- Add RevenueCat to the project
- Add a hook to use RevenueCat

--- a/app.json
+++ b/app.json
@@ -25,10 +25,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.rooookas.fastbitrevenue"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "710c4399-5e41-4585-ace8-d555c67599f0"
+      }
     }
   }
 }
